--- a/Connect2Fit/app/build.gradle
+++ b/Connect2Fit/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+//Test
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -27,6 +27,28 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.google.android.gms:play-services-maps:10.2.6'
+    //compile 'com.google.android.gms:play-services-maps:10.2.6'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+
     testCompile 'junit:junit:4.12'
+
+    compile 'com.google.firebase:firebase-appindexing:10.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-places:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.0'
+    compile 'com.google.firebase:firebase-database:10.0.0'
+    compile 'com.google.firebase:firebase-core:10.0.0'
+    //Absdul
+    //compile 'com.google.firebase:firebase-crash:10.0.1'
+    compile 'com.firebaseui:firebase-ui-database:1.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.0'
 }
+
+
+
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
